style: :lipstick: Fixed spacing in components

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,9 +1,9 @@
 .Home {
 	background: url("https://www.minecraft.net/content/dam/minecraft/home/home-hero-1200x600.jpg")
 		no-repeat;
-	background-position: top center;
+	background-position: center center;
 	color: white;
-	height: calc(100vh - 28px);
+	height: 600px;
 	max-width: 1328px;
 	margin: 0 auto;
 
