--- a/src/components/NewsCarousel/NewsCarousel.scss
+++ b/src/components/NewsCarousel/NewsCarousel.scss
@@ -3,6 +3,12 @@
 		repeat;
 	background-position: center;
 
+	@media only screen and (max-width: 430px) {
+		& {
+			padding-top: 2rem;
+		}
+	}
+
 	&-title {
 		margin: 0 0 1.25rem 0;
 		font-size: 1.75rem;
